# PokemonAPI

./: .gitignore  README.md  app.py  config.py  evolutions.json  generate.py  goals.md  index.html  list.txt  pokemon.db  pscraper.py  pyproject.toml  requirements.txt  sqlite_filler.py  temp.html
.github/workflows/: pythonapp.yml
api/abilities/: Adaptability.json  Aerilate.json  Aftermath.json  Air Lock.json  Air-Lock.json  Analytic.json  Anger Point.json  Anger-Point.json  Anticipation.json  Arena Trap.json  Arena-Trap.json  Aroma Veil.json  Aura Break.json  Aura-Break.json  Bad Dreams.json  Bad-Dreams.json  Ball Fetch.json  Battery.json  Battle Armor.json  Battle Bond.json  Beast Boost.json  Beast-Boost.json  Berserk.json  Big Pecks.json  Big-Pecks.json  Blaze.json  Bulletproof.json  Cheek Pouch.json  Cheek-Pouch.json  Chlorophyll.json  Clear Body.json  Clear-Body.json  Cloud Nine.json  Cloud-Nine.json  Color Change.json  Color-Change.json  Comatose.json  Competitive.json  Compound Eyes.json  Contrary.json  (+296 more)
api/pokemon/: Abomasnow.json  Abra.json  Absol.json  Accelgor.json  Aegislash.json  Aerodactyl.json  Aggron.json  Aipom.json  Alakazam.json  Alcremie.json  Alomomola.json  Altaria.json  Amaura.json  Ambipom.json  Ampharos.json  (+875 more)
cache/: ColorList.html  EvolutionGraph.html  FormDifferences.html  NationalDex.html
css/: main.css
js/: main.js
res/: index.html  index_bkp.html  styles.css
sql/: pokemon_tables.sql
src/: abilities_list.py  app.py  app.yaml  config.py  db.py  form_differences.py  gather_files.py  national_dex.py  test.html
templates/: index.html
(+66 files in other folders)
