[tool.poetry]
name = "pokemonscraper"
version = "1.0.0"
description = "API for Pokemon Data"
authors = ["Eric Cao <eric7252000@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
beautifulsoup4 = "^4.9.1"
loguru = "^0.5.1"
networkx = "^2.5"
requests = "^2.24.0"
pymongo = "^3.11.0"
lxml = "^4.6.5"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
bandit = "^1.6.2"
black = "^20.8b1"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
